# noita-wand-search

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: pages.yml
crates/noita_sim/: .gitignore  Cargo.toml  build.rs
crates/noita_sim/src/: filters.rs  lib.rs  loot.rs  potions.rs  profiling.rs  rng.rs  search.rs  types.rs  validator.rs  wandgen.rs
crates/noita_sim/src/data/: action_type.rs  mod.rs  spell_prob.rs  wand_sprite.rs
crates/noita_sim/src/potion/: generator.rs  mod.rs
crates/noita_sim/src/wand/: deck.rs  generator.rs  mod.rs  profiling.rs  sprites.rs  stats.rs
crates/noita_sim/tests/: eoe_wand_deck.rs  filters.rs  spell_icons.rs
crates/noita_web/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  package.json
crates/noita_web/src/: app.rs  lib.rs  main.rs  search_worker_protocol.rs
crates/noita_web/src/components/: control_panel.rs  controls.rs  filter_panel.rs  map_panel.rs  mod.rs  results_panel.rs  search_runner.rs  unlock_settings.rs
crates/noita_web/src/components/ui/: combobox.rs  dropdown.rs  mod.rs  select_option.rs  shared.rs  spell_card.rs  wand_card.rs
crates/noita_web/style/: tailwind.css
crates/noita_web/tools/: sync-assets.mjs
