[workspace]
members = [
    "crates/noita_sim",
    "crates/noita_web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.wasm-release]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
