[package]
name = "noita_web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
noita_sim = { path = "../noita_sim" }
serde.workspace = true
serde_json.workspace = true
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Navigator", "console", "Storage", "Element", "HtmlInputElement", "HtmlSelectElement", "HtmlElement", "HtmlDivElement", "Event", "SubmitEvent", "DragEvent", "DataTransfer", "File", "FileList", "MouseEvent", "KeyboardEvent", "FocusEvent"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
